--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Montserrat';
+  src: url('./fonts//Montserrat/Montserrat-VariableFont_wght.ttf');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Roboto';
+  src: url('./fonts/Roboto/Roboto-Regular.ttf');
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.back-btn {
+  width: 60px;
+  background: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.back-btn__link {
+  color: #000;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: 'Roboto';
+}
+
+.back-btn__link:hover {
+  text-decoration: underline;
+}
+
+.back-btn__link:active {
+  color: #5e5e5e;
+}
+
+.back-btn:active>svg>path {
+  fill: #5e5e5e;
 }
